MAIN CONTENT ADDED !

--- a/solar.html
+++ b/solar.html
@@ -198,4 +198,141 @@
 <img src="graph/sol/pt.png" />
 
 <p>Cela nous montre que pour des performances optimales pour alimenter un objet connecté, nous devrons régler la résistance sur 85&Omega;. C'est ce que nous ferons dans la seconde expérience.</p>
+
+<h5>Expérience 2</h5>
+
+<p>Nous allons maintenant chercher à caluler la puissance produite par la cellule en fonction du nombre de lux, nous allons évidemment placer une résistance de 85&Omega; dans le circuit pour obtenir des performances optimales. Nous allons mesurer dans un
+    premier temps la luminosité, l'intensité et la tension, puis, dans un second temps, nous calculerons la puissance.</p>
+
+<p>Matériel:<br/>x1 cellule solaire
+    <br/>x1 réostat
+    <br/>x1 ampèremètre
+    <br/>x1 voltmètre
+    <br/>x1 luxmètre</p>
+
+<p>Nous avons pu alors faire ces relevés :</p>
+
+<table border="1">
+    <tr>
+        <th>U</th>
+        <th>I</th>
+        <th>L</th>
+    </tr>
+    <tr>
+        <td>0,27</td>
+        <td>16,5</td>
+        <td>620</td>
+    </tr>
+    <tr>
+        <td>0,274</td>
+        <td>17</td>
+        <td>670</td>
+    </tr>
+    <tr>
+        <td>0,307</td>
+        <td>19,3</td>
+        <td>790</td>
+    </tr>
+    <tr>
+        <td>0,383</td>
+        <td>23,5</td>
+        <td>1070</td>
+    </tr>
+    <tr>
+        <td>0,438</td>
+        <td>26,8</td>
+        <td>1410</td>
+    </tr>
+    <tr>
+        <td>0,456</td>
+        <td>28,3</td>
+        <td>1760</td>
+    </tr>
+    <tr>
+        <td>0,487</td>
+        <td>30,3</td>
+        <td>2830</td>
+    </tr>
+    <tr>
+        <td>0,493</td>
+        <td>30,7</td>
+        <td>3250</td>
+    </tr>
+</table>
+
+<p>On peut donc tracer la courbe représentant la fonction qui à toute intensité lumineuse L associe une tension :</p>
+
+<img src="graph/sol/tl.png" />
+
+<p>On observe que la Tension augmente avec l'intensité lumineuse</p>
+
+<p>Ensuite, on peut tracer la courbe de la fonction qui à toute intensité lumineuse L associe une intensité :</p>
+
+<img src="graph/sol/il.png" />
+
+<p>De même que la tension, l'intensité du courant augmente proportionellement à l'intensité lumineuse</p>
+
+<p>Après calcul de la puissance, nous obtenons le tableau suivant :</p>
+
+<table border="1">
+    <tr>
+        <th>U</th>
+        <th>I</th>
+        <th>L</th>
+        <th>P</th>
+    </tr>
+    <tr>
+        <td>0,27</td>
+        <td>16,5</td>
+        <td>620</td>
+        <td>4,455</td>
+    </tr>
+    <tr>
+        <td>0,274</td>
+        <td>17</td>
+        <td>670</td>
+        <td>4,658</td>
+    </tr>
+    <tr>
+        <td>0,307</td>
+        <td>19,3</td>
+        <td>790</td>
+        <td>5,9251</td>
+    </tr>
+    <tr>
+        <td>0,383</td>
+        <td>23,5</td>
+        <td>1070</td>
+        <td>9,0005</td>
+    </tr>
+    <tr>
+        <td>0,438</td>
+        <td>26,8</td>
+        <td>1410</td>
+        <td>11,7384</td>
+    </tr>
+    <tr>
+        <td>0,456</td>
+        <td>28,3</td>
+        <td>1760</td>
+        <td>12,9048</td>
+    </tr>
+    <tr>
+        <td>0,487</td>
+        <td>30,3</td>
+        <td>2830</td>
+        <td>14,7561</td>
+    </tr>
+    <tr>
+        <td>0,493</td>
+        <td>30,7</td>
+        <td>3250</td>
+        <td>15,1351</td>
+    </tr>
+</table>
+
+<p>Nous pouvons alors tracer la courbe correspondant à la fonction qui à toute intensité lumineuse L associe une puissance P :</p>
+
+<img src="graph/sol/pl.png" />
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
