--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             Bilal Molli - Barthélémy Paléologue - Malo Le Reste<br/> 1<sup>è</sup>Se, Loquidy<br/>
         </p>
     </footer>
-    <div id="tothetop"><img src="tothetop.png" /></div>
+    <div id="tothetop"><img src="tothetop.png" title="Vers le haut de la page" /></div>
 </body>
 <script src="script.js"></script>
 
