--- a/photos.html
+++ b/photos.html
@@ -1,1 +1,33 @@
 <h3>Photos</h3>
+
+<h4>Capteur Solaire</h4>
+<div id="solpic">
+    <img src="data/sol/1.jpg" />
+    <img src="data/sol/2.jpg" />
+    <img src="data/sol/3.jpg" />
+    <img src="data/sol/4.jpg" />
+    <img src="data/sol/5.jpg" />
+    <img src="data/sol/6.jpg" />
+    <img src="data/sol/7.jpg" />
+    <img src="data/sol/8.jpg" />
+    <img src="data/sol/9.jpg" />
+    <img src="data/sol/10.jpg" />
+    <img src="data/sol/11.jpg" />
+    <img src="data/sol/12.jpg" />
+    <img src="data/sol/13.jpg" />
+    <img src="data/sol/14.jpg" />
+    <img src="data/sol/15.jpg" />
+    <img src="data/sol/16.jpg" />
+    <img src="data/sol/17.jpg" />
+    <img src="data/sol/18.jpg" />
+    <img src="data/sol/19.jpg" />
+    <img src="data/sol/20.jpg" />
+</div>
+
+<h4>Piezoélectricité</h4>
+
+
+
+
+
+<h4>Effet Seebeck</h4>
