--- a/photos.html
+++ b/photos.html
@@ -26,7 +26,23 @@
 
 <h4>Piezoélectricité</h4>
 
-
+<div id="piezopic">
+    <img src="data/piezo/1.jpg" />
+    <img src="data/piezo/2.jpg" />
+    <img src="data/piezo/3.jpg" />
+    <img src="data/piezo/4.jpg" />
+    <img src="data/piezo/5.jpg" />
+    <img src="data/piezo/6.jpg" />
+    <img src="data/piezo/7.jpg" />
+    <img src="data/piezo/8.jpg" />
+    <img src="data/piezo/9.jpg" />
+    <img src="data/piezo/10.jpg" />
+    <img src="data/piezo/11.jpg" />
+    <img src="data/piezo/12.jpg" />
+    <img src="data/piezo/latis.jpg" />
+    <img src="data/piezo/piezo.jpg" />
+    <img src="data/piezo/scotch.jpg" />
+</div>
 
 
 
