--- a/photos.html
+++ b/photos.html
@@ -47,3 +47,45 @@
 
 
 <h4>Effet Seebeck</h4>
+
+<div id="seebeckpic">
+    <img src="data/seebeck/1.jpg" />
+    <img src="data/seebeck/2.jpg" />
+    <img src="data/seebeck/3.jpg" />
+    <img src="data/seebeck/4.jpg" />
+    <img src="data/seebeck/5.jpg" />
+    <img src="data/seebeck/6.jpg" />
+    <img src="data/seebeck/7.jpg" />
+    <img src="data/seebeck/8.jpg" />
+    <img src="data/seebeck/9.jpg" />
+    <img src="data/seebeck/10.jpg" />
+    <img src="data/seebeck/11.jpg" />
+    <img src="data/seebeck/12.jpg" />
+    <img src="data/seebeck/13.jpg" />
+    <img src="data/seebeck/14.jpg" />
+    <img src="data/seebeck/15.jpg" />
+    <img src="data/seebeck/16.jpg" />
+    <img src="data/seebeck/17.jpg" />
+    <img src="data/seebeck/18.jpg" />
+    <img src="data/seebeck/19.jpg" />
+    <img src="data/seebeck/20.jpg" />
+    <img src="data/seebeck/21.jpg" />
+    <img src="data/seebeck/22.jpg" />
+    <img src="data/seebeck/23.jpg" />
+    <img src="data/seebeck/24.jpg" />
+    <img src="data/seebeck/25.jpg" />
+    <img src="data/seebeck/26.jpg" />
+    <img src="data/seebeck/27.jpg" />
+    <img src="data/seebeck/28.jpg" />
+    <img src="data/seebeck/29.jpg" />
+    <img src="data/seebeck/30.jpg" />
+    <img src="data/seebeck/31.jpg" />
+    <img src="data/seebeck/32.jpg" />
+    <img src="data/seebeck/33.jpg" />
+    <img src="data/seebeck/34.jpg" />
+    <img src="data/seebeck/35.jpg" />
+    <img src="data/seebeck/36.jpg" />
+    <img src="data/seebeck/37.jpg" />
+    <img src="data/seebeck/mesureseebeck.jpg" />
+    <img src="data/seebeck/seebeck.jpg" />
+</div>
