FILL GRAPH PAGE TOO

--- a/graph.html
+++ b/graph.html
@@ -1,3 +1,32 @@
 <h3>Graphiques</h3>
 
+<h4>Capteur Solaire</h4>
+<div id="solpic">
+    <img src="graph/sol/il.png" />
+    <img src="graph/sol/ir.png" />
+    <img src="graph/sol/pl.png" />
+    <img src="graph/sol/pt.png" />
+    <img src="graph/sol/tl.png" />
+    <img src="graph/sol/tr.png" />
+</div>
+
+<h4>Piezoélectricité</h4>
+
+<div id="piezopic">
+    <img src="graph/piezo/voltmarche1_milieu.jpg" />
+    <img src="graph/piezo/voltmarche2_devant.jpg" />
+    <img src="graph/piezo/voltmarche3_arriere.jpg" />
+    <img src="graph/piezo/voltmarche4_interne.jpg" />
+    <img src="graph/piezo/graph.jpg" />
+</div>
+
+
+
+<h4>Effet Seebeck</h4>
+
+<div id="seebeckpic">
+    <img src="graph/seebeck/dtu.png" />
+    <img src="graph/seebeck/pdt.png" />
+    <img src="graph/seebeck/pu.png" />
+</div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
