LE PROBLEME DU LITHIUM

--- a/presentation.html
+++ b/presentation.html
@@ -12,6 +12,11 @@
     leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut
     donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
 
+<h3>Le problème du Lithium</h3>
+
+<p>Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer l'environnement.
+    Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu recyclables, ce qui en fait des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont inflammables et peuvent être sujettes à l'explosion.
+    Pour toutes ces raison, il faut chercher des nouvelles solutions pour alimenter les objets connectés, c'est ce que nous allons faire ici.</p>
 
 <h3>L'effet photovoltaïque</h3>
 
