--- a/seebeck.html
+++ b/seebeck.html
@@ -22,8 +22,8 @@
 </p>
 
 <p>Montage :<br/>
-    <img width="50%" src="data/seebeck/seebeck.jpg" /><br/>
-    <img width="10%" src="data/seebeck/mesureseebeck.jpg" /></p>
+    <img height="400px" src="data/seebeck/seebeck.jpg" />
+    <img height="400px" src="data/seebeck/mesureseebeck.jpg" /></p>
 
 <p>Résultats :<br/><img src="graph/seebeck/dtu.png" /></p>
 
