--- a/solar.html
+++ b/solar.html
@@ -214,9 +214,9 @@
 
 <table border="1">
     <tr>
-        <th>U</th>
-        <th>I</th>
-        <th>L</th>
+        <th>Tension (en V)</th>
+        <th>Intensité (en mA)</th>
+        <th>Intensité Lumineuse (en Lux)</th>
     </tr>
     <tr>
         <td>0,27</td>
@@ -276,10 +276,10 @@
 
 <table border="1">
     <tr>
-        <th>U</th>
-        <th>I</th>
-        <th>L</th>
-        <th>P</th>
+        <th>Tension (en V)</th>
+        <th>Intensité (en mA)</th>
+        <th>Intensité Lumineuse (en Lux)</th>
+        <th>Puissance (en W)</th>
     </tr>
     <tr>
         <td>0,27</td>
