--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li><a href="seebeck.html">L'effet seebeck</a></li>
                     </ul>
                 </li>
-                <li><a href="app.html">Applications</a></li>
+                <li><a href="journal.html">Carnet de Bord</a></li>
                 <li><a href="annexes.html">Annexes</a>
                     <ul>
                         <li><a href="biblio.html">Bibliographie</a></li>
