--- a/presentation.html
+++ b/presentation.html
@@ -2,7 +2,7 @@
 
 <h3>Problématique</h3>
 
-<p>Après une semaine laborieuse de recherche, nous avons finalement décidé de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
+<p>Après une semaine laborieuse de recherche (comme vous pouvez le constater dans l'onglet carnet de bord), nous avons finalement décidé de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
 
 <h4 id="pb">Comment peut-on rendre les objets connectés électriquement autonomme ?</h4>
 
