BALISAGE HAVE BEEN DONE

--- a/journal.html
+++ b/journal.html
@@ -45,45 +45,93 @@
     <p>Nous avons une problématique, nous allons la faire valider par nos professeurs au prochain cours comme nous avons été trop long. Ensuite, nous allons commencer à rassembler le matériel nécessaire à la réalisation de notre projet.
     </p>
 </div>
-<h3>Jour 5 : 10/10/2017</h3>
-Objectifs : Voir avec le laborantin le matériel à notre disposition pour nos expériences et terminer la séance avec nos expériences prêtes. Déroulement : Nous avons choisi le matériel que nous allons utiliser et celui que nous allons acheter par nos propres
-moyens pour nos expérience. Nous acheterons des cellules piézoélectriques et un module peltier, le Loquidy fournira la cellule photovoltaïque. Conclusion : Nous effectuerons une série d'au moins, 3 expériences différentes, afin de tester différentes manières
-permettants d’extraire de l’énergie du milieu ambiant (par exemple avec des cellules piezo, un module peltier, et à partir du solaire). Notre but est faire un tableau comparant nos sources d'énergies (rendement, coût, Pmax, difficulté à mettre en oeuvre...)
-<h3>Jour 6 : 11/10/2017</h3> Objectif : Nous avons maintenant des cellules piezos et une centrale latispro. Nous allons essayer de prendre des mesures et de nous familiariser avec le logiciel. Déroulement : Nous avons récupéré une cellule piézoélectrique
-que nous avons branché à un multimètre pour mesurer la tension et l’intensité générée, puis nous avons utilisé la station Latis afin de tracer un graphique. En attendant de nouvelles expériences, nous avons utilisé les impulsions avec nos mains pour générer
-l’électricité.
-<h3>Jour 7 : 7/11/2017</h3>
-Objectif : Tracer la courbe reliant le poid d’une personne à l’énergie produite par les cellules piezo. Déterminer si une zone de pied est plus favorable à la production d’énergie qu’une autre. Déroulement : Nous avons commencé notre expérience. Nous
-avons fixé des cellules piézo-électriques sous les pieds d’une personne et mesuré l’énergie produite par la marche d’une personne. Mais nous nous sommes trompés et avons fait nos mesures en volt à la place de watt. Maintenant que nous avons compris comment
-nous servir du logiciel, nous allons réessayer à la prochaine séance pour déterminer une fonction reliant le poid à l’énergie produite.
-<h3>Jour 8 : 14/11/2017</h3>
-Objectif : Tracer la courbe reliant le poid d’une personne à l’énergie produite par les cellules piezo. pour cela nous allons utiliser un Bilal en état de marche. Matériel : x1 Cellule Piezo x1 Centrale Latis x1 Multimètre x1 Résistance de 10Ω x1 Bilal
-Déroulement : Nous mesurons l’intensité du courant électrique dans le circuit quand Bilal se déplace. Nous pourrons donc relever des valeurs qui nous permettront de tracer une courbe de l’intensité en fonction du poids appliqué. Résultats : Nos résultats
-sont absolument ridicules, nous n’arrivons même pas à mesurer l’intensité tellement elle est faible. Nous nous retrouvons donc dans l’incapacité de tracer une courbe avec de tels résultats. Nous utiliserons donc une formule trouvée dans une publication
-scientifique sur la piézo électricité (“Mechanical Vibrations: Applications to Equipment” Par Yvon Mori), cette formule est : Q = d33P Où Q est la charge électrique en Coulomb, d33 est le coefficient de piézoélectricité (propre au matériau de la cellule)
-et P la pression appliquée sur la cellule.
-<h3>Jour 9 : 21/11/2017</h3> Objectif : Détermination d’un poid de référence en N et d’une surface de référence, et donc une pression de référence. Ce qui nous permet d'extrapoler l’intensité produite par n’importe quel poid sur une cellule piezo-électrique
-d’une surface donnée. Matériel : x1 Poid de référence x1 Balance x1 Cellule piezo électrique Déroulement : Nous mesurons l’aire de la surface de contact de la cellule piezo électrique. Ensuite nous pesons le poids de référence. Nous déduisons donc la
-pression exercée par le poids sur la cellule. Résultats : Nous avons calculé la surface de contact de la cellule : surface de contact de la cellule : Sréférence=32=28,26 mm2=2,810-5 m2 Nous avons ensuite pesé le poids de référence : poid de référence
-: Préférence=178,1 g = 0,18 kg = 0,189,81 = 1,75 N Notre pression de référence sera donc : Préférence=FréférenceSréférence= 1,752,810-5=625 000 P Or nous connaissons la relation Q=d33P, dont voici la représentation graphique : On a donc : Qréférence=2,3310-12625
-000=1.45610-6 C Or on a 1C = 103 mA.s Par conséquent : Iréférence=1,45610-6103=1,45610-3mA.s d’où : Iréférence= 524110-3 5 mA.h Or Bilal pèse 40kg donc 392.4N (nous admettons que Bilal applique une force égale à la moitié de son poid à chaque pas) soit
-224 fois plus que le poid de référence, on a donc une intensité de 0.5A.h par pas si on garde la même surface de contact. Conclusion : Ainsi que nous l’avons vu, nous obtenons des résultats absolument négligeables, il est donc illusoir d’imaginer alimenter
-des objets connectés avec cette source d’énergie. Cependant, cette source d’énergie serait adaptée pour être placée dans le sol, dans des zones passantes. La piézoélectricité n’est donc pas une option pour les particuliers.
-<h3>Jour 10 : 5/12/2017</h3> Résumé: Les cours de TPE ont été annulés, à la place nous avons eu une conférence sur les dangers d’internet.
-<h3>Jour 11 : 12/12/2017</h3>
-Objectifs : Etablir une fonction qui à toute différence de température ∆T (en Kelvin) associe une tension U (en Volt). Avec cette formule, nous allons nous retrouver en mesure de calculer l’intensité dans notre circuit. Matériel: x1 Un module a effet
-Peltier x1 Un chauffage x1 Un bécher x1 De l’eau du robinet x1 Un multimètre x1 Un dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC x1 Une résistance de 10Ω Déroulement : On fait chauffer de l’eau dans un bécher jusqu’à une température
-plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Peltier dans l’eau pour faire chauffer l’une de ses deux faces. On utilise le dissipateur thermique pour refroidir l’autre face du peltier. De cette différence
-de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température ∆T, associe la tension U spécifiée en circuit ouvert. Nous pouvons alors tracer un graphique de ces résultats. Il en résulte une
-droite passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite, nous pouvons brancher le module en série avec une résistance de 10Ω, et grâce à la relation U=RI , en déduire l’intensité parcourant
-le circuit. Résultats : En plaçant nos points sur un repère orthonormé,nous obtenons une droite passant par l’origine du repère. La droite représente la fonction qui à toute différence de température en K° aux faces de notre peltier, associe une tension
-en V. Avec une résistance de 10Ω, pour une tension de 1mV, on calcule une intensité de 100mA, comme U=RI nous pouvons calculer une intensité pour n’importe quelle tension. Cependant ce résultat est théorique car il ne prend pas en compte la résistance
-interne de notre module peltier qui est relativement élevée (elle est la cause du mauvais rendement)
-<h3>Jour 12 : 18/12/2017</h3>
-Objectif : Affiner nos mesures de tension aux bornes du module peltier et calculer l’intensité du circuit. Nous mesurerons le voltage généré par notre module pour vérifier si nos calcules sont justes. Matériel : x1 Chauffage x1 Module à effet Peltier
-x1 Un bécher x1 De l’eau du robinet x1 Un multimètre x1 Un dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC x1 Une résistance de 10Ω Déroulement : Même chose que la semaine précédente, nous allons mesurer de nouvelles tensions pour
-affiner le graphique. Ensuite, en branchant un ampèremètre en série dans le système ainsi qu’une résistance de 10Ω, nous allons calculer la résistance interne du module peltier, ce qui nous permettra de trouver une fonction qui à toute tension U associe
-une intensité I. Nous utiliserons la relation U=RI. Résultats : On sait que R=10+x où xreprésente la résistance interne du module peltier et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité avec l’ampèremètre et
-la tension avec le voltmètre. On en déduit les relations suivantes : I =UR⇔ I =U10+x⇔ x=UI-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans le circuit, on trouve : I =0,019 Aet U=0,36 V On en déduit la résistance
-interne du module peltier qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=UR, et que R est constant, nous avons trouvé la fonction qui à toute tension mesurée au bornes du module peltier associe une intensité
-électrique.
+<div>
+    <h3>Jour 5 : 10/10/2017</h3>
+    <h4>Objectifs :</h4>
+    <p>Voir avec le laborantin le matériel à notre disposition pour nos expériences et terminer la séance avec nos expériences prêtes.</p>
+    <h4>Déroulement :</h4>
+    <p>Nous avons choisi le matériel que nous allons utiliser et celui que nous allons acheter par nos propres moyens pour nos expérience. Nous acheterons des cellules piézoélectriques et un module peltier, le Loquidy fournira la cellule photovoltaïque.</p>
+    <h4>Conclusion :</h4>
+    <p>Nous effectuerons une série d'au moins, 3 expériences différentes, afin de tester différentes manières permettants d’extraire de l’énergie du milieu ambiant (par exemple avec des cellules piezo, un module peltier, et à partir du solaire). Notre but
+        est faire un tableau comparant nos sources d'énergies (rendement, coût, Pmax, difficulté à mettre en oeuvre...)</p>
+</div>
+<div>
+    <h3>Jour 6 : 11/10/2017</h3>
+    <h4>Objectif :</h4>
+    <p>Nous avons maintenant des cellules piezos et une centrale latispro. Nous allons essayer de prendre des mesures et de nous familiariser avec le logiciel.</p>
+    <h4>Déroulement :</h4>
+    <p>Nous avons récupéré une cellule piézoélectrique que nous avons branché à un multimètre pour mesurer la tension et l’intensité générée, puis nous avons utilisé la station Latis afin de tracer un graphique. En attendant de nouvelles expériences, nous
+        avons utilisé les impulsions avec nos mains pour générer l’électricité.
+    </p>
+</div>
+<div>
+    <h3>Jour 7 : 7/11/2017</h3>
+    <h4>Objectif :</h4>
+    <p>Tracer la courbe reliant le poid d’une personne à l’énergie produite par les cellules piezo. Déterminer si une zone de pied est plus favorable à la production d’énergie qu’une autre.</p>
+    <h4>Déroulement :</h4>
+    <p>Nous avons commencé notre expérience. Nous avons fixé des cellules piézo-électriques sous les pieds d’une personne et mesuré l’énergie produite par la marche d’une personne. Mais nous nous sommes trompés et avons fait nos mesures en volt à la place
+        de watt. Maintenant que nous avons compris comment nous servir du logiciel, nous allons réessayer à la prochaine séance pour déterminer une fonction reliant le poid à l’énergie produite.</p>
+</div>
+<div>
+    <h3>Jour 8 : 14/11/2017</h3>
+    <h4>Objectif :</h4>
+    <p>Tracer la courbe reliant le poid d’une personne à l’énergie produite par les cellules piezo. pour cela nous allons utiliser un Bilal en état de marche.</p>
+    <h4>Matériel :</h4>
+    <p>x1 Cellule Piezo<br/> x1 Centrale Latis<br/> x1 Multimètre<br/> x1 Résistance de 10Ω<br/> x1 Bilal</p>
+    <h4>Déroulement :</h4>
+    <p>Nous mesurons l’intensité du courant électrique dans le circuit quand Bilal se déplace. Nous pourrons donc relever des valeurs qui nous permettront de tracer une courbe de l’intensité en fonction du poids appliqué.</p>
+    <h4>Résultats :</h4>
+    <p>Nos résultats sont absolument ridicules, nous n’arrivons même pas à mesurer l’intensité tellement elle est faible. Nous nous retrouvons donc dans l’incapacité de tracer une courbe avec de tels résultats. Nous utiliserons donc une formule trouvée dans
+        une publication scientifique sur la piézo électricité (“Mechanical Vibrations: Applications to Equipment” Par Yvon Mori), cette formule est : Q = d33P Où Q est la charge électrique en Coulomb, d33 est le coefficient de piézoélectricité (propre
+        au matériau de la cellule) et P la pression appliquée sur la cellule.</p>
+</div>
+<div>
+    <h3>Jour 9 : 21/11/2017</h3>
+    <h4>Objectif :</h4>
+    <p>Détermination d’un poid de référence en N et d’une surface de référence, et donc une pression de référence. Ce qui nous permet d'extrapoler l’intensité produite par n’importe quel poid sur une cellule piezo-électrique d’une surface donnée.</p>
+    <h4>Matériel :</h4>
+    <p>x1 Poid de référence<br/> x1 Balance<br/> x1 Cellule piezo électrique</p>
+    <h4>Déroulement :</h4>
+    <p>Nous mesurons l’aire de la surface de contact de la cellule piezo électrique. Ensuite nous pesons le poids de référence. Nous déduisons donc la pression exercée par le poids sur la cellule.</p>
+    <h4>Résultats :</h4>
+    <p>Nous avons calculé la surface de contact de la cellule : surface de contact de la cellule : Sréférence=32=28,26 mm2=2,810-5 m2 Nous avons ensuite pesé le poids de référence : poid de référence : Préférence=178,1 g = 0,18 kg = 0,189,81 = 1,75 N Notre
+        pression de référence sera donc : Préférence=FréférenceSréférence= 1,752,810-5=625 000 P Or nous connaissons la relation Q=d33P, dont voici la représentation graphique : On a donc : Qréférence=2,3310-12625 000=1.45610-6 C Or on a 1C = 103 mA.s
+        Par conséquent : Iréférence=1,45610-6103=1,45610-3mA.s d’où : Iréférence= 524110-3 5 mA.h Or Bilal pèse 40kg donc 392.4N (nous admettons que Bilal applique une force égale à la moitié de son poid à chaque pas) soit 224 fois plus que le poid de
+        référence, on a donc une intensité de 0.5A.h par pas si on garde la même surface de contact. Conclusion : Ainsi que nous l’avons vu, nous obtenons des résultats absolument négligeables, il est donc illusoir d’imaginer alimenter des objets connectés
+        avec cette source d’énergie. Cependant, cette source d’énergie serait adaptée pour être placée dans le sol, dans des zones passantes. La piézoélectricité n’est donc pas une option pour les particuliers.</p>
+</div>
+<div>
+    <h3>Jour 10 : 5/12/2017</h3>
+    <p>Les cours de TPE ont été annulés, à la place nous avons eu une conférence sur les dangers d’internet.</p>
+</div>
+<div>
+    <h3>Jour 11 : 12/12/2017</h3>
+    <h4>Objectifs :</h4>
+    <p>Etablir une fonction qui à toute différence de température ∆T (en Kelvin) associe une tension U (en Volt). Avec cette formule, nous allons nous retrouver en mesure de calculer l’intensité dans notre circuit.</p>
+    <h4>Matériel:</h4>
+    <p>x1 Un module a effet Peltier <br/>x1 Un chauffage<br/> x1 Un bécher <br/>x1 De l’eau du robinet <br/>x1 Un multimètre <br/>x1 Un dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC <br/>x1 Une résistance de 10Ω</p>
+    <h4>Déroulement :</h4>
+    <p>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Peltier dans l’eau pour faire chauffer l’une de ses deux faces. On utilise le dissipateur
+        thermique pour refroidir l’autre face du peltier. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température ∆T, associe la tension U spécifiée en circuit ouvert.
+        Nous pouvons alors tracer un graphique de ces résultats. Il en résulte une droite passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite, nous pouvons brancher le module en série avec
+        une résistance de 10Ω, et grâce à la relation U=RI , en déduire l’intensité parcourant le circuit.</p>
+    <h4>Résultats :</h4>
+    <p>En plaçant nos points sur un repère orthonormé,nous obtenons une droite passant par l’origine du repère. La droite représente la fonction qui à toute différence de température en K° aux faces de notre peltier, associe une tension en V. Avec une résistance
+        de 10Ω, pour une tension de 1mV, on calcule une intensité de 100mA, comme U=RI nous pouvons calculer une intensité pour n’importe quelle tension. Cependant ce résultat est théorique car il ne prend pas en compte la résistance interne de notre
+        module peltier qui est relativement élevée (elle est la cause du mauvais rendement)</p>
+</div>
+<div>
+    <h3>Jour 12 : 18/12/2017</h3>
+    <h4>Objectif :</h4>
+    <p>Affiner nos mesures de tension aux bornes du module peltier et calculer l’intensité du circuit. Nous mesurerons le voltage généré par notre module pour vérifier si nos calcules sont justes.</p>
+    <h4>Matériel :</h4>
+    <p>x1 Chauffage<br/>x1 Module à effet Peltier<br/> x1 Un bécher<br/>x1 De l’eau du robinet<br/>x1 Un multimètre<br/>x1 Un dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC<br/>x1 Une résistance de 10Ω</p>
+    <h4>Déroulement :</h4>
+    <p>Même chose que la semaine précédente, nous allons mesurer de nouvelles tensions pour affiner le graphique. Ensuite, en branchant un ampèremètre en série dans le système ainsi qu’une résistance de 10Ω, nous allons calculer la résistance interne du
+        module peltier, ce qui nous permettra de trouver une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation U=RI.</p>
+    <h4>Résultats :</h4>
+    <p>On sait que R=10+x où xreprésente la résistance interne du module peltier et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations suivantes
+        : I =UR⇔ I =U10+x⇔ x=UI-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans le circuit, on trouve : I =0,019 Aet U=0,36 V On en déduit la résistance interne du module peltier qui est donc de 8.37Ω. La résistance
+        totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=UR, et que R est constant, nous avons trouvé la fonction qui à toute tension mesurée au bornes du module peltier associe une intensité électrique.
+    </p>
+</div>
