--- a/presentation.html
+++ b/presentation.html
@@ -12,26 +12,27 @@
     leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut
     donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
 
-<h3>Le problème du Lithium</h3>
+<h4>Le problème du Lithium</h4>
+<img style="width:20%;float:left;" src="ionexploding.jpg" />
 
 <p style="width:80%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer l'environnement.
     Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voire pas du tout) recyclables, ce qui en fait des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont inflammables et peuvent
     être sujettes à l'explosion. Pour toutes ces raison, il faut chercher des nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en abordant 3 solutions possible au problème</p>
 
-<img style="width:20%;float:right;" src="ionexploding.jpg" />
+
 
 <h3>L'effet photovoltaïque</h3>
 
 <h4>Définition :</h4>
 
-<p style="width:80%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"<sub>Source:<i>http://www.wikipedia.org/</i></sub></p>
+<p style="width:80%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/">http://www.wikipedia.org/</a></sub></p>
 
 <img style="width:20%;float:left;" src="photovolt.png" />
 
 <h3>La piezoélectricité</h3>
 
 <h4>Définition :</h4>
-<p style="width:80%;float:left;">“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”<sub>Source:<i>http://www.wikipedia.org/</i></sub>
+<p style="width:80%;float:left;">“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”<br/><sub>Source : <a href="http://www.wikipedia.org/">http://www.wikipedia.org/</a></sub>
     <br/><br/> Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par la course pour
     alimenter un bracelet connecté qui se chargerait de collecter les données sur cette même course.</p>
 <img style="width:20%;float:left;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
@@ -39,6 +40,6 @@
 <h3>L'effet seebeck</h3>
 
 <h4>Définition :</h4>
-<p style="width:80%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corp s conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<sub>Source:<i>http://www2.ac-lyon.fr</i></sub>
+<p style="width:80%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corp s conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr">http://www2.ac-lyon.fr</a></sub>
 </p>
 <img style="width:20%;float:left;" src="seebeck.bmp" />
