--- a/presentation.html
+++ b/presentation.html
@@ -16,8 +16,8 @@
 <img style="width:20%;float:left;" src="ionexploding.jpg" />
 
 <p style="width:80%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer l'environnement.
-    Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voire pas du tout) recyclables, ce qui en fait des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont inflammables et peuvent
-    être sujettes à l'explosion. Pour toutes ces raison, il faut chercher des nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en abordant 3 solutions possible au problème</p>
+    Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont inflammables et peuvent
+    être sujettes à l'explosion. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en abordant 3 possibles solutions au problème</p>
 
 
 
