correction de fautes

--- a/solar.html
+++ b/solar.html
@@ -1,5 +1,9 @@
 <h3>L'énergie solaire</h3>
 
+<p>L'énergie solaire est maintenant très connue et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (classique, mais efficace).<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un objet connecté,
+    qu'il soit à l'intérieur ou à l'extérieur du batiment.<br/>
+</p>
+
 <p>
     Le Capteur solaire permet de créer de l'énergie à partir d'une stimulation photonique d'une cellule photovoltaïque.<br/>
 </p>
@@ -9,9 +13,6 @@
 <p>Nous allons chercher la résistance pour laquelle la puissance générée est maximale.</p>
 
 <h5>Expérience 1</h5>
-<p>L'énergie solaire est maintenant très connue et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (classique, mais efficace).<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un objet connecté,
-    qu'il soit à l'intérieur ou à l'extérieur du batiment.<br/>
-</p>
 
 <p>Tout d'abord, nous allons lister les tensions et les intensités mesurées avec différentes résistances, nous pourrons alors en faire des représentations graphiques.</p>
 
@@ -101,8 +102,8 @@
 <p>On peut observer une augmentation progressive en fonction de la résistance</p>
 <p>Par suite, pour la tension en fonction de la résistance, nous obtenons ceci :</p>
 <img src="graph/sol/tr.png" />
-<p>On observe une diminution de la tension, ce qui est logique puisque U=RxI et que l'intensité augmente plus lentement que la résistance baisse</p>
-<p>Nous pouvons ensuite refaire le même tableau en ajoutant la colonne puissance, qui s'obtient par la simple multiplication de l'intensité et de la tension. On obtient donc le tableau suivant :</p>
+<p>On observe une diminution de la tension, ce qui est logique puisque U=RxI et que l'intensité augmente plus lentement que la résistance baisse.</p>
+<p>Nous pouvons ensuite refaire le même tableau en ajoutant la colonne de puissance, qui s'obtient par la simple multiplication de l'intensité et de la tension. On obtient donc le tableau suivant :</p>
 
 
 <table border="1">
@@ -264,13 +265,13 @@
 
 <img src="graph/sol/tl.png" />
 
-<p>On observe que la Tension augmente avec l'intensité lumineuse</p>
+<p>On observe que la Tension augmente avec l'intensité lumineuse.</p>
 
 <p>Ensuite, on peut tracer la courbe de la fonction qui à toute intensité lumineuse L associe une intensité :</p>
 
 <img src="graph/sol/il.png" />
 
-<p>De même que la tension, l'intensité du courant augmente proportionellement à l'intensité lumineuse</p>
+<p>De même que la tension, l'intensité du courant augmente proportionellement à l'intensité lumineuse.</p>
 
 <p>Après calcul de la puissance, nous obtenons le tableau suivant :</p>
 
