--- a/piezo.html
+++ b/piezo.html
@@ -10,7 +10,7 @@
 <h5>Application à la marche des êtres humains</h5>
 
 <p>Protocole :<br/> Nous allons "scotcher" une cellule piezoélectrique au dessous de la semelle de Bilal et mesurer le voltage produit par une marche de 10 secondes. Nous allons donc utiliser le logiciel Latis Pro afin de mesurer le voltage et de tracer
-    des graphqiues. De plus nous allons déterminer quelle est la zone du pied la plus intéressante pour placer la cellule.
+    des graphiques. De plus nous allons déterminer quelle est la zone du pied la plus intéressante pour placer la cellule.
 </p>
 
 <p id="mat">Matériel :<br/> Cellule piezoélectrique :<br/>
@@ -26,22 +26,22 @@
     <video src="data/piezo/videos/milieu1.mp4" controls></video>
     <img src="graph/piezo/voltmarche1_milieu.JPG" /><br/> Cette fois-ci, on atteint 3V à chaque pas, le milieu du pied est donc bien plus aproprié afin de placer une cellule.<br/> Sous le talon :<br/>
     <video src="data/piezo/videos/arriere1.mp4" controls></video>
-    <img src="graph/piezo/voltmarche3_arriere.JPG" /><br/> Sous le talon, le voltage est légèrement plus faible, on atteint 2V à chaque pas<br/> Ensuite, nous avons décidé de tester une cellule dans la chaussure :<br/>
+    <img src="graph/piezo/voltmarche3_arriere.JPG" /><br/> Sous le talon, le voltage est légèrement plus faible, on atteint 2V à chaque pas.<br/> Ensuite, nous avons décidé de tester une cellule dans la chaussure :<br/>
     <img src="graph/piezo/voltmarche4_interne.JPG" id="lastpict" /><br/> Le résultat est très décevant, on atteint à peine 1V</p>
 
-<p>Conclusion :<br/> Nous avons pu observer que en mettant une cellule sous le milieu du pied, on pouvait obtenir un voltage satisfaisant</p>
+<p>Conclusion :<br/> Nous avons pu observer que en mettant une cellule sous le milieu du pied, on pouvait obtenir un voltage satisfaisant.</p>
 
 <p>Partie 2 : Trouver l'intensité générée (avec des maths)</p>
 
-<p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte mechanique<br/>    Or comme nous l'ont appris les documents scientifiques (allez check la bibliographie pour plus d'informations) que nous avons consultés :<br/> <i>Q = d33 x F</i><br/> On sait que <i>F = 196.2N/2.8x10<sup>-15</sup>m<sup>2</sup></i> et <i>d33 = 2.33x10<sup>-12</sup></i><br/>    Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de 1.456x10<sup>-6</sup>C<br/> Or <i>1C = 1000mAs</i> donc Bilal génère 1.456x10<sup>-3</sup>mAs ce qui nous fait donc à peu près 5mAh.<br/> Cela signifie
-    que pendant une marche de 1h, Bilal peut générer 5mA, ce qui permettrait de rechrger une batterie de 3500mAh à hauteur de 0.15%</p>
+<p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte mécanique.<br/>    Or comme nous l'ont appris les documents scientifiques (allez check la bibliographie pour plus d'informations) :<br/> <i>Q = d33 x F</i><br/> On sait que <i>F = 196.2N/2.8x10<sup>-15</sup>m<sup>2</sup></i> et <i>d33 = 2.33x10<sup>-12</sup></i><br/>    Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de 1.456x10<sup>-6</sup>C<br/> Or <i>1C = 1000mAs</i> donc Bilal génère 1.456x10<sup>-3</sup>mAs ce qui nous fait donc à peu près 5mAh.<br/> Cela signifie
+    que pendant une marche de 1h, Bilal peut générer 5mA, ce qui permettrait de recharger une batterie de 3500mAh à hauteur de 0.15%</p>
 
 
 <p>Conclusion sur la piezoélectricité :</p>
 
 <p>Nous avons vu grace à nos expériences que l'on peut en effet produire de l'énergie grâce à des cellules piezoélectriques. Cependant, elles sont trop peu efficaces afin d'être utilisées dans le cadre d'un usage personnel.<br/> Malgré cela, nous pourrions
-    envisager des routes ou même un sol très féquenté bardé de cellules piezoélectriques, la contrainte mechanique d'une foule ou de plusieures voitures serait suffisante afin de recharger des objets connectés dans des points de recharge libres ou même
-    pour alimenter l'éclairage public</p>
+    envisager des routes ou même un sol très féquenté bardé de cellules piezoélectriques. La contrainte mécanique d'une foule ou de plusieures voitures serait suffisante afin de recharger des objets connectés dans des points de recharge libres ou même
+    pour alimenter l'éclairage public.</p>
 
 
 
