--- a/seebeck.html
+++ b/seebeck.html
@@ -1,8 +1,8 @@
 <h3>L'effet Seebek</h3>
 
 <p>
-    Le module à effet Seebeck permet de produire de l'énergie à partir d'une différence de température entre les deux faces du module. La face exposée à la plus grande température absorbe la chaleur et l'autre la rejète, ce processus génère un peu d'énergie
-    que l'on peut récupérer.<br/> On peut aussi alimenter le module, il absorbera la chaleur d'un coté et la rejetera de l'autre en fonction du sens du courant. Cependant, ce n'est pas ce que l'on cherche à faire ici (on veut récupérer de l'énergie,
+    Le module à effet Seebeck permet de produire de l'énergie à partir d'une différence de température entre les deux faces du module. La face exposée à la plus grande température absorbe la chaleur et l'autre la rejette, ce processus génère un peu d'énergie
+    que l'on peut récupérer.<br/> On peut aussi alimenter le module, il absorbera la chaleur d'un coté et la rejettera de l'autre en fonction du sens du courant. Cependant, ce n'est pas ce que l'on cherche à faire ici (on veut récupérer de l'énergie,
     pas l'utiliser).<br/>
 </p>
 
@@ -12,7 +12,7 @@
 
 <p>Nous allons chercher une fonction qui à toute différence de température &Delta;T en Kelvin associe une tension U en Volt</p>
 
-<p>Matériel :<br/> x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 Un bécher<br/> x1 De l’eau du robinet<br/> x1 Un multimètre<br/> x1 Un dissipateur thermique (puissance max dissipée 65W) => Ventirad de PC<br/> x1 Une résistance de 10Ω
+<p>Matériel :<br/> x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 Un bécher<br/> De l’eau du robinet<br/> x1 Un multimètre<br/> x1 Un dissipateur thermique (puissance max dissipée 65W) => Ventirad de PC<br/> x1 Une résistance de 10Ω
 </p>
 
 <p>Protocole Expérimental :<br/>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Seebeck dans l’eau pour faire chauffer l’une de ses deux faces.
@@ -33,9 +33,9 @@
 
 
 
-<p>Protocole Expérimental : <br/> Nous refaisons le montage précédent. En ajoutant un ampèremètre en série dans le système ainsi qu’une résistance de 10Ω, nous allons calculer la résistance interne du module à effet Seebeck, ce qui nous permettra de trouver
-    une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation U = R x I. Résultats : On sait que R=10+x où x représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De
-    plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations suivantes : I = U/R ⇔ I = U/(10+x) ⇔ x=U/I-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans
+<p>Protocole Expérimental : <br/> Nous refaisons le montage précédent en ajoutant un ampèremètre en série dans le système ainsi qu’une résistance de 10Ω. Nous allons calculer la résistance interne du module à effet Seebeck, ce qui nous permettra de trouver
+    une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation U = R x I. Résultats : On sait que R=10+X où X représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De
+    plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations suivantes : I = U/R ⇔ I = U/(10+X) ⇔ X=U/I-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans
     le circuit, on trouve : I = 0,019A et U= 0,36V On en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=U/R, et que R est constant, nous avons trouvé
     la fonction qui à toute tension mesurée au bornes du module à effet Seebeck associe une intensité électrique. Il s'agit de la fonction f(U) = U/18.37<br/> On en déduit alors la fonction qui à tout I et U associe P : f(I,U) = IxU = (1/18.37)xUxU =
     U
